# ifm3d-ros

ifm3d_description/: CMakeLists.txt  package.xml
ifm3d_description/cfg/: view_standalone.rviz
ifm3d_description/launch/: view_o2r255.launch
ifm3d_description/meshes/collision/: ifm_o3r225.stl
ifm3d_description/meshes/visual/: ifm_o3r225.dae
ifm3d_description/tests/: roslaunch_test_o3r255.xml
ifm3d_description/urdf/: o3r255_macro.xacro  o3r255_standalone.xacro
